Fixed Wave Contrast Error

--- a/CSS-week1-HW1/css/style.css
+++ b/CSS-week1-HW1/css/style.css
@@ -65,7 +65,7 @@ main{
 footer{
   font-family:Arial, Helvetica, sans-serif;
   font-size:small;
-  background-color:darkgray;
+  background-color:bisque;
   display:inline-block;
   text-align:left;
   line-height:normal;
